[tool.poetry]
name = "vanquisher"
version = "0.1.0"
description = "Vanquisher is a game about exploration, looting, evolving and honing, and cleansing the evil off the lands of Hillivet. And about shops."
authors = ["Gustavo6046 <rehermann6046@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
fastapi = "^0.63.0"
typer = "^0.3.2"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
pygame = "^2.0.1"
Js2Py = "^0.70"
anyio = "^2.0.2"
attr = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
snakeviz = "^2.1.0"
mypy = {git = "https://github.com/python/mypy"}
flake8 = "^3.8.4"
pylint = "^2.6.0"
rope = "^0.18.0"
isort = "^5.7.0"
black = "^20.8b1"
pydocstyle = "^5.1.1"
bandit = "^1.7.0"
interrogate = "^1.3.2"
coverage = "^5.3.1"
pytest-cov = "^2.10.1"
tox = "^3.21.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39.38,37,36},pypy37
isolated_build = True

[testenv]
commands =
	poetry install

	# Linters, in descending order of precedence
    poetry run mypy vanquisher
    poetry run bandit -r vanquisher -c .banditrc
    poetry run pylint vanquisher
    poetry run black -c vanquisher
    poetry run flake8 vanquisher
    poetry run isort -c vanquisher
    poetry run interrogate -r vanquisher
"""
