[tool.poetry]
name = "vanquisher"
version = "0.1.0"
description = "Vanquisher is a game about exploration, looting, evolving and honing, and cleansing the evil off the lands of Hillivet. And about shops."
authors = ["Gustavo6046 <rehermann6046@gmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6.2,<3.10.0"
Js2Py = "^0.70"
attr = "^0.3.1"
typer = "^0.3.2"

# server dependencies
anyio = {version = "^2.0.2", optional = true}
fastapi = {version = "^0.63.0", optional = true}
uvicorn = {extras = ["standard"], version = "^0.13.3", optional = true}

# client backends
pygame = {version = "^2.0.1", optional = true}

# optimizerz
numba = {git = "https://github.com/numba/numba", optional = true}
llvmlite = {git = "https://github.com/numba/llvmlite", optional = true}
numpy = {version = "^1.19.5", optional = true}
typing-extensions = "^3.7.4"
cffi = "^1.14.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
snakeviz = "^2.1.0"
mypy = {git = "https://github.com/python/mypy"}
flake8 = "^3.8.4"
pylint = "^2.6.0"
rope = "^0.18.0"
isort = "^5.7.0"
black = "^20.8b1"
pydocstyle = "^5.1.1"
bandit = "^1.7.0"
interrogate = "^1.3.2"
coverage = "^5.3.1"
pytest-cov = "^2.10.1"
tox = "^3.21.1"
autopep8 = "1.5"

[tool.poetry.extras]
server = ["anyio"]

# Backends
display-pygame = ["pygame"]
display-pysdl2 = ["pysdl2"]

server-asgi = ["fastapi", "uvicorn"]

# Optimizers
optimizer-numba = ["numba", "llvmlite"]
optimizer-numpy = ["numpy"]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry_core>=1.0.0", "cffi"]
build-backend = "poetry.core.masonry.api"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    test
    lint

isolated_build = True

[testenv:lint]
deps =
    poetry

commands =
	poetry install

	# Linters, in descending order of precedence
    poetry run mypy vanquisher
    poetry run bandit -r vanquisher -c .banditrc
    poetry run pylint vanquisher
    poetry run black -c vanquisher
    poetry run flake8 vanquisher
    poetry run isort -c -rc vanquisher
    poetry run interrogate -v vanquisher

[testenv:test]
deps =
    poetry

commands =
	poetry install

	# Run test
	poetry run pytest --cov=vanquisher tests

	# Show coverage report
	- coverage report -m

	# Generate coverage XML (for CI)
	- coverage xml
"""
